--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.6.4",
-        "illuminate/database": "^5.4||^6||^7||^8|^9"
+        "illuminate/database": "^5.4||^6||^7||^8||^9"
     },
     "require-dev": {
         "laravel/laravel": "^8|^9",
