--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "illuminate/database": "^5.4||^6||^7||^8||^9"
     },
     "require-dev": {
-        "laravel/laravel": "^8|^9",
+        "laravel/laravel": "^8||^9",
         "phpunit/phpunit": "^9"
     },
     "autoload": {
